	removing symbols.
	lib/vstrcat.c: Removed the file after rewriting the only
	function in lib/errmsg.c that used anything from that file.
	lib/objects.c: Changed signature of fl_get_object_bw()
	to match the documentation (it now returns an int and
	takes only a single argument).
	lib/box.c: Boxes of type FL_NO_BOX and FL_FLAT_BOX now have a
	border width of 0.

2012-03-19 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c, lib/forms.c: Several changes to speed up
	redraw, thanks to Werner Heisch noticing the problem.
	Function for setting form background color added.
	* lib/handling.c: when in a callback e.g. for a browser a
	new window was opened was under the mouse the browser didn't
	receive the correct coordinates on mouse release as
	Werner Heisch noticed.
	* lib/align.c: Cleanup of code for label alignments and
	some new functions added (this resulted also in lot of
	minor changes in other files).

2012-03-12 Jens Thoms Toerring    <jt@toerring.de>
	* lib/xdraw.c: Code cleanup for handling of clipping,
	several new functions added for that.
	* lib/tbox.c: Drawing outside the object disabled,
	thanks to Sian Mountbatten for reportimg the problem
	and Paul Nicholson for analyzing its causes.
	* lib/handling.c: Bug that appeared when in the
	callback of a browswer a new window was created,
	that led to inconsistencies in the original browser
	hopefully fixed. Thanks to Werner Heisch for finding
	this strange problem!x

2011-11-17 Jens Thoms Toerring    <jt@toerring.de>

	* lib/button.c: Bug pointed out by Michal Szymanski
	on resetting radio buttons fixed.

2011-11-06 Jens Thoms Toerring    <jt@toerring.de>

	* lib/flresource.c: Previous change that made double
	buffering the default for forms reverted.

2011-10-06 Jens Thoms Toerring    <jt@toerring.de>

	* xyplot.c: Drawing bug when fl_set_xyplot_fixed_xaxis()
	or fl_set_xyplot_fixed_yaxis() had been used and pointed
	out by Alessandro Basili hopefully fixed.
